Applied patch contributed by Tim Emiola to keep the code base compatable with at least JDK 1.3.1. (a few 1.4 methods had sneaked in).
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/trunk@310102 13f79535-47bb-0310-9956-ffa450edef68